updated update product
