# swagger/products/Products.yml
@@ -124,6 +124,29 @@ paths:
     put:
       security:
         - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: number
+                category:
+                  type: string
+                brand:
+                  type: string
+                image:
+                  type: string
+                rating:
+                  type: number
+                numReviews:
+                  type: number
       summary: Returns a single product by ID.
       parameters:
         - name: productId
